--- a/pages/2876.html
+++ b/pages/2876.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1532905248" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1532905248" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,24 +307,67 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
 <h4 id='enriched_category_theory'>Enriched category theory</h4>
 
-<div class='hide'>
-<p><em>Could not include enriched category theory - contents</em></p>
-</div>
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/enriched+category+theory'>enriched category theory</a></strong></p><h2 id='background'>Background</h2><ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+category'>monoidal category</a>, <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed monoidal category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cosmos'>cosmos</a>, <a class='existingWikiWord' href='/nlab/show/multicategory'>multicategory</a>, <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a>, <a class='existingWikiWord' href='/nlab/show/double+category'>double category</a>, <a class='existingWikiWord' href='/nlab/show/virtual+double+category'>virtual double category</a></p>
+</li>
+</ul><h2 id='basic_concepts'>Basic concepts</h2><ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/enriched+functor'>enriched functor</a>, <a class='existingWikiWord' href='/nlab/show/profunctor'>profunctor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/enriched+functor+category'>enriched functor category</a></p>
+</li>
+</ul><h2 id='universal_constructions'>Universal constructions</h2><ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/weighted+limit'>weighted limit</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/end'>end</a>, <a class='existingWikiWord' href='/nlab/show/coend'>coend</a></p>
+</li>
+</ul><h2 id='extra_stuff_structure_property'>Extra stuff, structure, property</h2><ul>
+<li><a class='existingWikiWord' href='/nlab/show/copower'>copower</a>ing (tensoring), <a class='existingWikiWord' href='/nlab/show/power'>power</a>ing (cotensoring)</li>
+</ul><h3 id='homotopical_enrichment'>Homotopical enrichment</h3><ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/enriched+homotopical+category'>enriched homotopical category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/enriched+model+category'>enriched model category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+homotopical+presheaves'>model structure on homotopical presheaves</a></p>
+</li>
+</ul><div>
+<p>
+  <a href='/nlab/edit/enriched+category+theory+contents'>Edit this sidebar</a>
+</p>
+</div></div>
 
 <h4 id='additive_and_abelian_categories'>Additive and abelian categories</h4>
 
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/additive+and+abelian+categories'>additive and abelian categories</a></strong></p>
-
-<h2 id='context_and_background'>Context and background</h2>
-
-<ul>
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/additive+and+abelian+categories'>additive and abelian categories</a></strong></p><h2 id='context_and_background'>Context and background</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/enriched+category+theory'>enriched category theory</a></p>
 </li>
@@ -337,11 +379,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a></p>
 </li>
-</ul>
-
-<h2 id='categories'>Categories</h2>
-
-<ul>
+</ul><h2 id='categories'>Categories</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Ab-enriched+category'>Ab-enriched category</a></p>
 </li>
@@ -350,7 +388,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/pre-additive+category'>pre-additive category</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Karoubian+category'>pseudo-abelian category</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/pseudo-abelian+category'>pseudo-abelian category</a></li>
 </ul>
 </li>
 
@@ -369,11 +407,7 @@ margin-left: 0em;
 <li>
 <p>(AB5) <a class='existingWikiWord' href='/nlab/show/Grothendieck+category'>Grothendieck category</a></p>
 </li>
-</ul>
-
-<h2 id='functors'>Functors</h2>
-
-<ul>
+</ul><h2 id='functors'>Functors</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/additive+functor'>additive functor</a></p>
 </li>
@@ -381,11 +415,7 @@ margin-left: 0em;
 <li>
 <p>left/right <a class='existingWikiWord' href='/nlab/show/exact+functor'>exact functor</a></p>
 </li>
-</ul>
-
-<h2 id='derived_categories'>Derived categories</h2>
-
-<ul>
+</ul><h2 id='derived_categories'>Derived categories</h2><ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/derived+category'>derived category</a></p>
 </li>
@@ -401,51 +431,38 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/triangulated+category'>triangulated category</a></p>
 </li>
-</ul>
-<div>
+</ul><div>
 <p>
   <a href='/nlab/edit/additive+and+abelian+categories+-+contents'>Edit this sidebar</a>
 </p>
 </div></div>
 </div>
-</div>
-
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>A <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> <math class='maruku-mathml' display='inline' id='mathml_f18c12c624de792400d09897dff995b35b017d92_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>G</mi></mstyle><mo>=</mo><mo stretchy='false'>(</mo><mi>G</mi><mo>,</mo><mi>μ</mi><mo>,</mo><mi>η</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathbf{G}=(G,\mu,\eta)</annotation></semantics></math> on an <a class='existingWikiWord' href='/nlab/show/additive+category'>additive category</a> <math class='maruku-mathml' display='inline' id='mathml_f18c12c624de792400d09897dff995b35b017d92_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is <strong>additive</strong> if its underlying <a class='existingWikiWord' href='/nlab/show/endofunctor'>endofunctor</a> <math class='maruku-mathml' display='inline' id='mathml_f18c12c624de792400d09897dff995b35b017d92_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>G:A\to A</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/additive+functor'>additive functor</a>. One defines an <strong>additive <a class='existingWikiWord' href='/nlab/show/comonad'>comonad</a></strong> in the same vein.</p>
-
-<p>Note that every additive category is <a class='existingWikiWord' href='/nlab/show/Ab-enriched+category'>Ab-enriched</a>, and an additive monad is then the same as an <a class='existingWikiWord' href='/nlab/show/Ab'>Ab</a>-<a class='existingWikiWord' href='/nlab/show/enriched+monad'>enriched monad</a>.</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
+</div><h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
 <ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+</ul>
+</div>
+</p><h2 id='idea'>Idea</h2><p>A <a class='existingWikiWord' href='/nlab/show/monad'>monad</a> <math class='maruku-mathml' display='inline' id='mathml_f583f06d98c329a12bb3135a11963fc7d6149342_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>G</mi></mstyle><mo>=</mo><mo stretchy='false'>(</mo><mi>G</mi><mo>,</mo><mi>μ</mi><mo>,</mo><mi>η</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathbf{G}=(G,\mu,\eta)</annotation></semantics></math> on an <a class='existingWikiWord' href='/nlab/show/additive+category'>additive category</a> <math class='maruku-mathml' display='inline' id='mathml_f583f06d98c329a12bb3135a11963fc7d6149342_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is <strong>additive</strong> if its underlying <a class='existingWikiWord' href='/nlab/show/endofunctor'>endofunctor</a> <math class='maruku-mathml' display='inline' id='mathml_f583f06d98c329a12bb3135a11963fc7d6149342_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>G:A\to A</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/additive+functor'>additive functor</a>. One defines an <strong>additive <a class='existingWikiWord' href='/nlab/show/comonad'>comonad</a></strong> in the same vein.</p><p>Note that every additive category is <a class='existingWikiWord' href='/nlab/show/Ab-enriched+category'>Ab-enriched</a>, and an additive monad is then the same as an <a class='existingWikiWord' href='/nlab/show/Ab'>Ab</a>-<a class='existingWikiWord' href='/nlab/show/enriched+monad'>enriched monad</a>.</p><h2 id='related_concepts'>Related concepts</h2><ul>
 <li><a class='existingWikiWord' href='/nlab/show/strong+monad'>strong monad</a></li>
 </ul>
-
-<p>
-</p>
-
-<p>
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on March 11, 2014 02:54:27 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.155.115)
+  <p>
+  Last revised on July 30, 2018 at 07:36:36.
+  See the <a href="https://ncatlab.org/nlab/history/additive monad" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/additive+monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/additive+monad/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/additive+monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/additive+monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/additive+monad" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/additive+monad/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/additive+monad" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/additive+monad" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/additive monad/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/additive+monad" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/additive+monad" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/additive+monad" id="view_source" rel="nofollow">Source</a>
