--- a/pages/591.html
+++ b/pages/591.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1532905248" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1532905248" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,50 +307,31 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#contents'>Contents</a></li><li><a href='#definition'>Definition</a></li><li><a href='#remarks'>Remarks</a></li><li><a href='#examples'>Examples</a></li></ul></div>
-<h1 id='definition'>Definition</h1>
-
-<p>A <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_a304d0bd4c59ae6692569cf997c990cff1d91f5e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is <strong>cocomplete</strong> if it has all small <a class='existingWikiWord' href='/nlab/show/colimit'>colimits</a>: that is, if every <a class='existingWikiWord' href='/nlab/show/diagram'>diagram</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a304d0bd4c59ae6692569cf997c990cff1d91f5e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><mi>D</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'> F: D \to C</annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_a304d0bd4c59ae6692569cf997c990cff1d91f5e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> has a colimit in <math class='maruku-mathml' display='inline' id='mathml_a304d0bd4c59ae6692569cf997c990cff1d91f5e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>.</p>
-
-<p>The most natural morphisms between cocomplete categories are the <a class='existingWikiWord' href='/nlab/show/cocontinuous+functor'>cocontinuous functors</a>.</p>
-
-<h1 id='remarks'>Remarks</h1>
-
+      <h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
 <ul>
-<li>Dually, a category with all small limits is a <a class='existingWikiWord' href='/nlab/show/complete+category'>complete category</a>.</li>
-
-<li>A category <math class='maruku-mathml' display='inline' id='mathml_a304d0bd4c59ae6692569cf997c990cff1d91f5e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is cocomplete if and only if <math class='maruku-mathml' display='inline' id='mathml_a304d0bd4c59ae6692569cf997c990cff1d91f5e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>D</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>D^{op}</annotation></semantics></math> is complete, so the abstract properties of cocompleteness mimic those of completeness.</li>
-
-<li>If a category has not all small colimits but all <em>finite</em> colimits, then it is a <a class='existingWikiWord' href='/nlab/show/finitely+cocomplete+category'>finitely cocomplete category</a>.</li>
+<li><a href='#definition'>Definition</a></li>
+<li><a href='#remarks'>Remarks</a></li>
+<li><a href='#examples'>Examples</a></li>
 </ul>
-
-<h1 id='examples'>Examples</h1>
-
-<p>Many familiar categories of mathematical structures are cocomplete: to name just a few examples, <a class='existingWikiWord' href='/nlab/show/Set'>Set</a>, <a class='existingWikiWord' href='/nlab/show/Grp'>Grp</a>, <a class='existingWikiWord' href='/nlab/show/Ab'>Ab</a>, <a class='existingWikiWord' href='/nlab/show/Vect'>Vect</a> and <a class='existingWikiWord' href='/nlab/show/Top'>Top</a> are cocomplete.</p>
-
-<p>
- 
- 
-</p>
+</div>
+</p><h2 id='definition'>Definition</h2><p>A<a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_877f7bd956a83827e8669d1142281989a7f222e0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is <strong>cocomplete</strong> if it has all small <a class='existingWikiWord' href='/nlab/show/colimit'>colimits</a>: that is, if every <a class='existingWikiWord' href='/nlab/show/diagram'>diagram</a></p><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_877f7bd956a83827e8669d1142281989a7f222e0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><mi>D</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'> F: D \to C</annotation></semantics></math></div><p>where <math class='maruku-mathml' display='inline' id='mathml_877f7bd956a83827e8669d1142281989a7f222e0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/small+category'>small category</a> has a colimit in <math class='maruku-mathml' display='inline' id='mathml_877f7bd956a83827e8669d1142281989a7f222e0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>.</p><p>The most natural morphisms between cocomplete categories are the <a class='existingWikiWord' href='/nlab/show/cocontinuous+functor'>cocontinuous functors</a>.</p><h2 id='remarks'>Remarks</h2><p><em>Dually, a category with all small limits is a <a class='existingWikiWord' href='/nlab/show/complete+category'>complete category</a>.</em> A category <math class='maruku-mathml' display='inline' id='mathml_877f7bd956a83827e8669d1142281989a7f222e0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is cocomplete if and only if <math class='maruku-mathml' display='inline' id='mathml_877f7bd956a83827e8669d1142281989a7f222e0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>D</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>D^{op}</annotation></semantics></math> is complete, so the abstract properties of cocompleteness mimic those of completeness. * If a category has not all small colimits but all <em>finite</em> colimits, then it is a <a class='existingWikiWord' href='/nlab/show/finitely+cocomplete+category'>finitely cocomplete category</a>.</p><h2 id='examples'>Examples</h2><p>Manyfamiliar categories of mathematical structures are cocomplete: to name just a few examples, <a class='existingWikiWord' href='/nlab/show/Set'>Set</a>, <a class='existingWikiWord' href='/nlab/show/Grp'>Grp</a>, <a class='existingWikiWord' href='/nlab/show/Ab'>Ab</a>, <a class='existingWikiWord' href='/nlab/show/Vect'>Vect</a> and <a class='existingWikiWord' href='/nlab/show/Top'>Top</a> are cocomplete.</p>
 </div>
 
 <div class="revisedby">
-  Revised on January 24, 2017 15:33:58 
-  by <span class="newWikiWord">Max New<a href="/nlab/new/Max+New">?</a></span>
-  (129.10.110.48)
+  <p>
+  Last revised on July 30, 2018 at 08:59:36.
+  See the <a href="https://ncatlab.org/nlab/history/cocomplete category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cocomplete+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cocomplete+category/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/cocomplete+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cocomplete+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/cocomplete+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cocomplete+category/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/cocomplete+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cocomplete+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/cocomplete category/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/cocomplete+category" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/cocomplete+category" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/cocomplete+category" id="view_source" rel="nofollow">Source</a>
