--- a/pages/19553.html
+++ b/pages/19553.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      some_new_page in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      some_new_page
   </h1>
 
 
@@ -293,6 +293,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8795/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -305,52 +307,27 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6a435640108daa117dee195622791acea78e5aa9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>dgcAlg</mi> <mrow><mi>ℝ</mi><mo>,</mo><mo>≥</mo><mn>0</mn><mo>,</mo><mi>proj</mi></mrow> <mi>op</mi></msubsup><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Spec</mi></munder><mover><mo>⟵</mo><mi>𝒪</mi></mover></munderover><mspace width='thickmathspace'></mspace><mo stretchy='false'>[</mo><msup><mi>SuperCartSp</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Γ</mi></munder><mover><mo>⟵</mo><mi>const</mi></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>sSet</mi> <mi>Qu</mi></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟵</mo><mi>Sing</mi></munder><mover><mo>⟶</mo><mrow><mo stretchy='false'>|</mo><mo>−</mo><mo stretchy='false'>|</mo></mrow></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
-  dgcAlg^{op}_{\mathbb{R}, \geq 0, proj}
-    \;
-    \underoverset
-      {\underset{ Spec }{\longrightarrow}}
-      {\overset{ \mathcal{O} }{\longleftarrow}}
-      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
-    \;
-  [SuperCartSp^{op},sSet_{Qu}]_{proj,loc}
-    \;
-    \underoverset
-      {\underset{\Gamma}{\longrightarrow}}
-      {\overset{const}{\longleftarrow}}
-      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
-    \;
-  sSet_{Qu}
-    \;
-    \underoverset
-      {\underset{Sing}{\longleftarrow}}
-      {\overset{{\vert- \vert}}{\longrightarrow}}
-      {\phantom{A}\phantom{{}_{Qu}}\bot_{Qu}\phantom{A}}
-    \;
-  Top_{Qu}
-
-</annotation></semantics></math></div>
-<p><span class='newWikiWord'>some_new_page<a href='/nlab/new/some_new_page'>?</a></span></p>
+      <p>Testing</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 30, 2018 at 13:25:44.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on July 30, 2018 at 13:26:16.
+  See the <a href="https://ncatlab.org/nlab/history/some_new_page" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1608" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1608 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/some_new_page" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/some_new_page/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/some_new_page" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/some_new_page" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/some_new_page" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
