--- a/pages/1788.html
+++ b/pages/1788.html
@@ -305,7 +305,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_6a435640108daa117dee195622791acea78e5aa9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>dgcAlg</mi> <mrow><mi>ℝ</mi><mo>,</mo><mo>≥</mo><mn>0</mn><mo>,</mo><mi>proj</mi></mrow> <mi>op</mi></msubsup><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Spec</mi></munder><mover><mo>⟵</mo><mi>𝒪</mi></mover></munderover><mspace width='thickmathspace'></mspace><mo stretchy='false'>[</mo><msup><mi>SuperCartSp</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Γ</mi></munder><mover><mo>⟵</mo><mi>const</mi></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>sSet</mi> <mi>Qu</mi></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟵</mo><mi>Sing</mi></munder><mover><mo>⟶</mo><mrow><mo stretchy='false'>|</mo><mo>−</mo><mo stretchy='false'>|</mo></mrow></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
+      <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9dea0f828088a527b302bb58c7084755d91b8aee_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>dgcAlg</mi> <mrow><mi>ℝ</mi><mo>,</mo><mo>≥</mo><mn>0</mn><mo>,</mo><mi>proj</mi></mrow> <mi>op</mi></msubsup><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Spec</mi></munder><mover><mo>⟵</mo><mi>𝒪</mi></mover></munderover><mspace width='thickmathspace'></mspace><mo stretchy='false'>[</mo><msup><mi>SuperCartSp</mi> <mi>op</mi></msup><mo>,</mo><msub><mi>sSet</mi> <mi>Qu</mi></msub><msub><mo stretchy='false'>]</mo> <mrow><mi>proj</mi><mo>,</mo><mi>loc</mi></mrow></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟶</mo><mi>Γ</mi></munder><mover><mo>⟵</mo><mi>const</mi></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>sSet</mi> <mi>Qu</mi></msub><mspace width='thickmathspace'></mspace><munderover><mrow><mphantom><mi>A</mi></mphantom><mphantom><mrow><msub><mrow></mrow> <mi>Qu</mi></msub></mrow></mphantom><msub><mo>⊥</mo> <mi>Qu</mi></msub><mphantom><mi>A</mi></mphantom></mrow><munder><mo>⟵</mo><mi>Sing</mi></munder><mover><mo>⟶</mo><mrow><mo stretchy='false'>|</mo><mo>−</mo><mo stretchy='false'>|</mo></mrow></mover></munderover><mspace width='thickmathspace'></mspace><msub><mi>Top</mi> <mi>Qu</mi></msub></mrow><annotation encoding='application/x-tex'>
   dgcAlg^{op}_{\mathbb{R}, \geq 0, proj}
     \;
     \underoverset
@@ -330,19 +330,27 @@ margin-left: 0em;
   Top_{Qu}
 
 </annotation></semantics></math></div>
-<p><span class='newWikiWord'>some_new_page<a href='/nlab/new/some_new_page'>?</a></span></p>
+<p><a class='existingWikiWord' href='/nlab/show/some_new_page'>some_new_page</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/some_newer_page'>some_newer_page</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/some_still_newer_page'>some_still_newer_page</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/yet_another_test_page'>yet_another_test_page</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/still_one_more_test_page'>still_one_more_test_page</a></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on July 30, 2018 at 13:25:44.
+  Last revised on July 30, 2018 at 14:57:49.
   See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1608" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1608 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1609" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1609 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
