--- a/pages/19552.html
+++ b/pages/19552.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -307,14 +307,127 @@ margin-left: 0em;
 
 
 <div id="revision">
-      <h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
+      <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='algebra'>Algebra</h4>
+
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a></strong></p><p><a class='existingWikiWord' href='/nlab/show/universal+algebra'>universal algebra</a></p><h2 id='algebraic_theories'>Algebraic theories</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/algebraic+theory'>algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/2-algebraic+theory'>2-algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory'>(∞,1)-algebraic theory</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/monad'>monad</a> / <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-monad'>(∞,1)-monad</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/operad'>operad</a> / <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-operad'>(∞,1)-operad</a></p>
+</li><h2 id='algebras_and_modules'>Algebras and modules</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+a+monad'>algebra over a monad</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-algebra+over+an+%28%E2%88%9E%2C1%29-monad'>∞-algebra over an (∞,1)-monad</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+an+algebraic+theory'>algebra over an algebraic theory</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-algebra+over+an+%28%E2%88%9E%2C1%29-algebraic+theory'>∞-algebra over an (∞,1)-algebraic theory</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebra over an operad</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-algebra+over+an+%28%E2%88%9E%2C1%29-operad'>∞-algebra over an (∞,1)-operad</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/action'>action</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-action'>∞-action</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/representation'>representation</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-representation'>∞-representation</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/module'>module</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-module'>∞-module</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/associated+bundle'>associated bundle</a>, <a class='existingWikiWord' href='/nlab/show/associated+%E2%88%9E-bundle'>associated ∞-bundle</a></p>
+</li><h2 id='higher_algebras'>Higher algebras</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+%28%E2%88%9E%2C1%29-category'>monoidal (∞,1)-category</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+%28%E2%88%9E%2C1%29-category'>symmetric monoidal (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoid+in+an+%28%E2%88%9E%2C1%29-category'>monoid in an (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/commutative+monoid+in+an+%28%E2%88%9E%2C1%29-category'>commutative monoid in an (∞,1)-category</a></p>
+</li>
+</ul>
+</li><li>
+<p>symmetric monoidal (∞,1)-category of spectra</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/smash+product+of+spectra'>smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+smash+product+of+spectra'>symmetric monoidal smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectrum</a>, <a class='existingWikiWord' href='/nlab/show/module+spectrum'>module spectrum</a>, <a class='existingWikiWord' href='/nlab/show/algebra+spectrum'>algebra spectrum</a></p>
+</li>
+</ul>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/A-%E2%88%9E+algebra'>A-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/A-%E2%88%9E+ring'>A-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/A-%E2%88%9E+space'>A-∞ space</a></li>
+</ul>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/C-%E2%88%9E+algebra'>C-∞ algebra</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/E-%E2%88%9E+ring'>E-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/E-%E2%88%9E+algebra'>E-∞ algebra</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-module'>∞-module</a>, <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-module+bundle'>(∞,1)-module bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/multiplicative+cohomology+theory'>multiplicative cohomology theory</a></p>
+</li>
+</ul>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/L-%E2%88%9E+algebra'>L-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/deformation+theory'>deformation theory</a></li>
+</ul>
+</li><h2 id='model_category_presentations'>Model category presentations</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+T-algebras'>model structure on simplicial T-algebras</a> / <a class='existingWikiWord' href='/nlab/show/homotopy+T-algebra'>homotopy T-algebra</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+operads'>model structure on operads</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+algebras+over+an+operad'>model structure on algebras over an operad</a></p>
+</li><h2 id='geometry_on_formal_duals_of_algebras'>Geometry on formal duals of algebras</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>Isbell duality</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/derived+geometry'>derived geometry</a></p>
+</li><h2 id='theorems'>Theorems</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/Deligne+conjecture'>Deligne conjecture</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/delooping+hypothesis'>delooping hypothesis</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+Dold-Kan+correspondence'>monoidal Dold-Kan correspondence</a></p>
+</li><div></div><p>
+  <a href='/nlab/edit/higher+algebra+-+contents'>Edit this sidebar</a>
+</p></div>
+</div>
+</div><h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
-</p><h2 id='idea'>Idea</h2><p>Given some <a class='existingWikiWord' href='/nlab/show/algebra'>algebraic</a> object like an <a class='existingWikiWord' href='/nlab/show/associative+algebra'>associative algebra</a> or <a class='existingWikiWord' href='/nlab/show/group'>group</a> or <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>, with a notion of <em><a class='existingWikiWord' href='/nlab/show/central+extension'>central extension</a></em>, one may ask for the largest possible such, the <em>maximal central extension</em>. In good situations (…) this coincides with the <em><a class='existingWikiWord' href='/nlab/show/universal+central+extension'>universal central extension</a></em>.</p><h2 id='references'>References</h2><ul>
-<li>Katsuya Miyake, Hans Opolka, <em>On nilpotent extensions of algebraic number fields I</em>, Nagayo Math. J., Vol. 125 (1991), 1-14 (<a href='https://projecteuclid.org/euclid.nmj/1118783087'>Euclid:1118783087</a>)</li>
+</p><h2 id='idea'>Idea</h2><p>Given some <a class='existingWikiWord' href='/nlab/show/algebra'>algebraic</a> object like an <a class='existingWikiWord' href='/nlab/show/associative+algebra'>associative algebra</a> or <a class='existingWikiWord' href='/nlab/show/group'>group</a> or <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> which with a notion of <em><a class='existingWikiWord' href='/nlab/show/central+extension'>central extension</a></em>, one may ask for the largest possible such, the <em>maximal central extension</em>. This makes sense if one considers <a class='existingWikiWord' href='/nlab/show/subobjects'>subobjects</a> of a given algebraic object.</p><h2 id='related_concepts'>Related concepts</h2><ul>
+<li><a class='existingWikiWord' href='/nlab/show/universal+central+extension'>universal central extension</a></li>
+</ul><h2 id='references'>References</h2><ul>
+<li id='MiyakeOpolka91'>Katsuya Miyake, Hans Opolka, <em>On nilpotent extensions of algebraic number fields I</em>, Nagayo Math. J., Vol. 125 (1991), 1-14 (<a href='https://projecteuclid.org/euclid.nmj/1118783087'>Euclid:1118783087</a>)</li>
 </ul><blockquote>
 <p>The lower central series of the absolute Galois group of a field is obtained by iterating the process of forming the maximal central extension of the maximal nilpotent extension of a given class, starting with the maximal abelian extension. The purpose of this paper is to give a cohomological description of this central series in case of an algebraic number field.</p>
 </blockquote>
@@ -322,14 +435,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on July 30, 2018 at 12:35:53.
+  Last revised on July 31, 2018 at 04:38:27.
   See the <a href="https://ncatlab.org/nlab/history/maximal central extension" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/maximal+central+extension" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/maximal+central+extension" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/maximal+central+extension/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/maximal+central+extension" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/maximal+central+extension" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/maximal central extension/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
