--- a/pages/10657.html
+++ b/pages/10657.html
@@ -419,118 +419,61 @@ margin-left: 0em;
 
 <h4 id='group_theory'>Group Theory</h4>
 
-<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/group+theory'>group theory</a></strong></p><ul>
-<li><a class='existingWikiWord' href='/nlab/show/group'>group</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-group'>∞-group</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/group+object'>group object</a>, <a class='existingWikiWord' href='/nlab/show/group+object+in+an+%28%E2%88%9E%2C1%29-category'>group object in an (∞,1)-category</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a>, <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/group+action'>group action</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-action'>∞-action</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/representation'>representation</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-representation'>∞-representation</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/progroup'>progroup</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/homogeneous+space'>homogeneous space</a></li>
-</ul><h3 id='classical_groups'>Classical groups</h3><ul>
-<li>
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/group+theory'>group theory</a></strong></p><ul></ul><li><a class='existingWikiWord' href='/nlab/show/group'>group</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-group'>∞-group</a></li><li><a class='existingWikiWord' href='/nlab/show/group+object'>group object</a>, <a class='existingWikiWord' href='/nlab/show/group+object+in+an+%28%E2%88%9E%2C1%29-category'>group object in an (∞,1)-category</a></li><li><a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a>, <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a></li><li><a class='existingWikiWord' href='/nlab/show/group+action'>group action</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-action'>∞-action</a></li><li><a class='existingWikiWord' href='/nlab/show/representation'>representation</a>, <a class='existingWikiWord' href='/nlab/show/%E2%88%9E-representation'>∞-representation</a></li><li><a class='existingWikiWord' href='/nlab/show/progroup'>progroup</a></li><li><a class='existingWikiWord' href='/nlab/show/homogeneous+space'>homogeneous space</a></li><h3 id='classical_groups'>Classical groups</h3><ul></ul><li>
 <p><a class='existingWikiWord' href='/nlab/show/general+linear+group'>general linear group</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/unitary+group'>unitary group</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/special+unitary+group'>special unitary group</a>. <a class='existingWikiWord' href='/nlab/show/projective+unitary+group'>projective unitary group</a></li>
 </ul>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/orthogonal+group'>orthogonal group</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/special+orthogonal+group'>special orthogonal group</a></li>
 </ul>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/symplectic+group'>symplectic group</a></p>
-</li>
-</ul><h3 id='finite_groups'>Finite groups</h3><ul>
-<li>
+</li><h3 id='finite_groups'>Finite groups</h3><ul></ul><li>
 <p><a class='existingWikiWord' href='/nlab/show/finite+group'>finite group</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/symmetric+group'>symmetric group</a>, <a class='existingWikiWord' href='/nlab/show/cyclic+group'>cyclic group</a>, <a class='existingWikiWord' href='/nlab/show/braid+group'>braid group</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/classification+of+finite+simple+groups'>classification of finite simple groups</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/sporadic+finite+simple+groups'>sporadic finite simple groups</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Monster+group'>Monster group</a>, <a class='existingWikiWord' href='/nlab/show/Mathieu+group'>Mathieu group</a></li>
 </ul>
-</li>
-</ul><h3 id='group_schemes'>Group schemes</h3><ul>
-<li><a class='existingWikiWord' href='/nlab/show/algebraic+group'>algebraic group</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/abelian+variety'>abelian variety</a></li>
-</ul><h3 id='topological_groups'>Topological groups</h3><ul>
-<li>
+</li><h3 id='group_schemes'>Group schemes</h3><ul></ul><li><a class='existingWikiWord' href='/nlab/show/algebraic+group'>algebraic group</a></li><li><a class='existingWikiWord' href='/nlab/show/abelian+variety'>abelian variety</a></li><h3 id='topological_groups'>Topological groups</h3><ul></ul><li>
 <p><a class='existingWikiWord' href='/nlab/show/topological+group'>topological group</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/compact+topological+group'>compact topological group</a>, <a class='existingWikiWord' href='/nlab/show/locally+compact+topological+group'>locally compact topological group</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/maximal+compact+subgroup'>maximal compact subgroup</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/string+group'>string group</a></p>
-</li>
-</ul><h3 id='lie_groups'>Lie groups</h3><ul>
-<li>
+</li><h3 id='lie_groups'>Lie groups</h3><ul></ul><li>
 <p><a class='existingWikiWord' href='/nlab/show/Lie+group'>Lie group</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/compact+Lie+group'>compact Lie group</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/Kac-Moody+group'>Kac-Moody group</a></p>
-</li>
-</ul><h3 id='superlie_groups'>Super-Lie groups</h3><ul>
-<li>
+</li><h3 id='superlie_groups'>Super-Lie groups</h3><ul></ul><li>
 <p><a class='existingWikiWord' href='/nlab/show/super+Lie+group'>super Lie group</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/super+Euclidean+group'>super Euclidean group</a></p>
-</li>
-</ul><h3 id='higher_groups'>Higher groups</h3><ul>
-<li>
+</li><h3 id='higher_groups'>Higher groups</h3><ul></ul><li>
 <p><a class='existingWikiWord' href='/nlab/show/2-group'>2-group</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/crossed+module'>crossed module</a>, <a class='existingWikiWord' href='/nlab/show/strict+2-group'>strict 2-group</a></li>
 </ul>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/n-group'>n-group</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-group'>∞-group</a></p>
 
 <ul>
@@ -550,30 +493,17 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a></p>
 </li>
 </ul>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/circle+n-group'>circle n-group</a>, <a class='existingWikiWord' href='/nlab/show/string+2-group'>string 2-group</a>, <a class='existingWikiWord' href='/nlab/show/fivebrane+Lie+6-group'>fivebrane Lie 6-group</a></p>
-</li>
-</ul><h3 id='cohomology_and_extensions'>Cohomology and Extensions</h3><ul>
-<li>
+</li><h3 id='cohomology_and_extensions'>Cohomology and Extensions</h3><ul></ul><li>
 <p><a class='existingWikiWord' href='/nlab/show/group+cohomology'>group cohomology</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/group+extension'>group extension</a>,</p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/%E2%88%9E-group+extension'>∞-group extension</a>, <a class='existingWikiWord' href='/nlab/show/Ext-group'>Ext-group</a></p>
-</li>
-</ul><h3 id='related_concepts'>Related concepts</h3><ul>
-<li><a class='existingWikiWord' href='/nlab/show/quantum+group'>quantum group</a></li>
-</ul><div>
-<p>
+</li><h3 id='related_concepts'>Related concepts</h3><ul></ul><li><a class='existingWikiWord' href='/nlab/show/quantum+group'>quantum group</a></li><div></div><p>
   <a href='/nlab/edit/group+theory+-+contents'>Edit this sidebar</a>
-</p>
-</div></div>
+</p></div>
 </div>
 </div><h1 id='contents'>Contents</h1><p><div class='maruku_toc'>
 <ul>
@@ -590,7 +520,7 @@ margin-left: 0em;
 </ul>
 </ul>
 </div>
-</p><h2 id='definition'>Definition</h2><p>For any <a class='existingWikiWord' href='/nlab/show/algebra'>algebraic</a> object, such as an <a class='existingWikiWord' href='/nlab/show/associative+algebra'>associative algebra</a>, <a class='existingWikiWord' href='/nlab/show/group'>group</a>, <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>, etc. such that there is a notion of <a class='existingWikiWord' href='/nlab/show/central+extension'>central extension</a>, the <em>universal</em> central extension is, if it exists, the <a class='existingWikiWord' href='/nlab/show/initial+object'>initial object</a> in the <a class='existingWikiWord' href='/nlab/show/category'>category</a> of central extensions of that object.</p><h2 id='examples'>Examples</h2><p>For <math class='maruku-mathml' display='inline' id='mathml_49e10e490dd694a5321dceb8243bfbd9b16e59a0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete group</a> which is <a class='existingWikiWord' href='/nlab/show/perfect+group'>perfect</a>, the <em>universal <a class='existingWikiWord' href='/nlab/show/central+extension'>central extension</a></em> of <math class='maruku-mathml' display='inline' id='mathml_49e10e490dd694a5321dceb8243bfbd9b16e59a0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> is the essentially unique <a class='existingWikiWord' href='/nlab/show/group'>group</a> <math class='maruku-mathml' display='inline' id='mathml_49e10e490dd694a5321dceb8243bfbd9b16e59a0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> that is a <span class='newWikiWord'>Schur covering group<a href='/nlab/new/Schur+covering+group'>?</a></span> of <math class='maruku-mathml' display='inline' id='mathml_49e10e490dd694a5321dceb8243bfbd9b16e59a0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>.</p><h2 id='properties'>Properties</h2><ul>
+</p><h2 id='definition'>Definition</h2><p>For any <a class='existingWikiWord' href='/nlab/show/algebra'>algebraic</a> object, such as an <a class='existingWikiWord' href='/nlab/show/associative+algebra'>associative algebra</a>, <a class='existingWikiWord' href='/nlab/show/group'>group</a>, <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a>, etc. such that there is a notion of <a class='existingWikiWord' href='/nlab/show/central+extension'>central extension</a>, the <em>universal</em> central extension is, if it exists, the <a class='existingWikiWord' href='/nlab/show/initial+object'>initial object</a> in the <a class='existingWikiWord' href='/nlab/show/category'>category</a> of central extensions of that object.</p><h2 id='examples'>Examples</h2><p>For <math class='maruku-mathml' display='inline' id='mathml_7521adf694f592091e505b456269740a36f7daf0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> a <a class='existingWikiWord' href='/nlab/show/discrete+group'>discrete group</a> which is <a class='existingWikiWord' href='/nlab/show/perfect+group'>perfect</a>, the <em>universal <a class='existingWikiWord' href='/nlab/show/central+extension'>central extension</a></em> of <math class='maruku-mathml' display='inline' id='mathml_7521adf694f592091e505b456269740a36f7daf0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> is the essentially unique <a class='existingWikiWord' href='/nlab/show/group'>group</a> <math class='maruku-mathml' display='inline' id='mathml_7521adf694f592091e505b456269740a36f7daf0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> that is a <span class='newWikiWord'>Schur covering group<a href='/nlab/new/Schur+covering+group'>?</a></span> of <math class='maruku-mathml' display='inline' id='mathml_7521adf694f592091e505b456269740a36f7daf0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math>.</p><h2 id='properties'>Properties</h2><ul>
 <li>
 <p>The universal central extension of a perfect group is also perfect.</p>
 </li>
@@ -603,7 +533,13 @@ margin-left: 0em;
 <p>The universal central extension operator is idempotent, i.e., the universal central extension of the universal central extension is the universal central extension. This follows directly from the universal central extension being a Schur-trivial group.</p>
 </li>
 </ul><h2 id='related_concepts'>Related concepts</h2><ul>
-<li><span class='newWikiWord'>maximal central extension<a href='/nlab/new/maximal+central+extension'>?</a></span></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/maximal+central+extension'>maximal central extension</a></p>
+</li>
+
+<li>
+<p><span class='newWikiWord'>universal higher central extension<a href='/nlab/new/universal+higher+central+extension'>?</a></span></p>
+</li>
 </ul><h2 id='references'>References</h2><h3 id='general'>General</h3><p>Discussion in <a class='existingWikiWord' href='/nlab/show/semi-abelian+categories'>semi-abelian categories</a>:</p><ul>
 <li>Jose Casas, Tim Van der Linden, <em>A relative theory of universal central extensions</em> (<a href='https://arxiv.org/abs/0908.3762'>arXiv:0908.3762</a>)</li>
 </ul><h3 id='for_discrete_groups'>For discrete groups</h3><ul>
@@ -617,14 +553,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 30, 2018 at 12:27:02.
+  Last revised on July 31, 2018 at 04:58:25.
   See the <a href="https://ncatlab.org/nlab/history/universal central extension" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/universal+central+extension" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+central+extension/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/universal+central+extension" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+central+extension" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/universal+central+extension" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+central+extension/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/universal+central+extension" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+central+extension" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/universal central extension/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
